--- a/scripts/requirements.txt
+++ b/scripts/requirements.txt
@@ -1,9 +1,9 @@
 cmake
 pynvml
-Pillow>=8.3.2
-scipy==1.3.3
+Pillow
+scipy
 scikit-image
-tqdm==4.35.0
+tqdm
 wget
 cython
 lmdb
@@ -14,8 +14,8 @@ imutils
 imageio-ffmpeg
 qimage2ndarray
 albumentations
-requests==2.25.1
-nvidia-ml-py3==7.352.0
+requests
+nvidia-ml-py3
 pyglet
 timm
 diskcache
